# Flask_test_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Habr.html  LICENSE  Makefile  README.md  create_admin.py  get_all_news.py  pyproject.toml  requirements.txt  setup.cfg  tasks.py  webapp.db-journal
.github/workflows/: main.yml
tests/: tests.py  user_model_test.py
webapp/: __init__.py  errors.py  forms.py  model.py  python_org_news.py  task.py  weather.py
webapp/admin/: views.py
webapp/news/: models.py  views.py
webapp/news/parsers/: habr.py  utils.py
webapp/templates/: base.html  index.html  login.html  menu.html
webapp/templates/errors/: 404.html
webapp/templates/news/: index.html
webapp/templates/users/: edit_profile.html  login.html  registration.html  user_page.html
webapp/user/: decorators.py  forms.py  models.py  views.py
