[metadata]
name = Flask_test_project
version = 1.0.0
description = My package description
long_description = file: README.Docker.md
long_description_content_type = text/markdown
author = Borodiy Igor
author_email = igoruxa007@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
keywords = one, two

[mypy]
ignore_missing_imports = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
exclude = tests

[flake8]
ignore = E203, E266, W503, G200, G201, P103, E501
max-line-length = 80
max-complexity = 7
exclude = venv
per-file-ignores =
    __init__.py: F401, ABS101, F403
    */tests/*: TAE001, FNE006, CFQ002
    tests/*: TAE001, FN006, CFQ002
    conftest.py: TAE001, FNE008, FNE006
    **/conftest.py: TAE001, FNE008, FNE006
    webapp/__init__.py:F841
